welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:8: error: type mismatch;
 found   : Unit
 required: Boolean
    for (i<-20 to hour){
          ^